# neurosynth_autofeed

./: .gitignore  .pypirc  Master.py  Plots.py  README.md  api.py  assoc.csv  consts.py  master.py  neurosynthpy.yml  or.py  plot_anatomical_voi.py  plot_association_hist.py  plot_assosiations.py  plot_by_assosiations.py  plot_by_papers.py  plot_coordinates.py  pyproject.toml  setup.cfg  studies.csv  test_associations_parser.py  test_querier.py  test_studies_parser.py  test_validator.py  validator.py  working_example_glassBrain_plotting.py
nilearn_cache/joblib/nilearn/maskers/base_masker/_filter_and_extract/1d40caea51068f63964b9eea77067d42/: metadata.json
nilearn_cache/joblib/nilearn/maskers/base_masker/_filter_and_extract/31e968489cc6efaba5fa27e0aa89a02e/: metadata.json  output.pkl
nilearn_cache/joblib/nilearn/maskers/base_masker/_filter_and_extract/45ca7dfca78b140f5fa9c476419bc99a/: metadata.json  output.pkl
nilearn_cache/joblib/nilearn/maskers/base_masker/_filter_and_extract/7504dbbdca500e64978535e01c7f1646/: metadata.json
nilearn_cache/joblib/nilearn/maskers/base_masker/_filter_and_extract/ad5845102f2cda9ebfd830e4dbce89dc/: metadata.json  output.pkl
nilearn_cache/joblib/nilearn/maskers/base_masker/_filter_and_extract/d52b7548b8fd16aca59b8d8db2bb1111/: metadata.json
nilearn_cache/joblib/nilearn/maskers/base_masker/_filter_and_extract/f321ceb4f29d6c584b40c95c51e3ecc2/: output.pkl
parsers/: __init__.py  associations_parser.py  parser.py  studies_parser.py  test_associations_parser.py  test_studies_parser.py
plotting/: plot_anatomical_voi.py  plot_coordinates.py
src/neurosynthpy/: api.py  master.py  validator.py
src/neurosynthpy/parsers/: studies_parser.py  test_associations_parser.py
src/neurosynthpy/plotting/: __init__.py  plot_by_target.py  plot_coordinates.py  plot_hist.py  plot_validations.py
src/neurosynthpy/web_querier/: test_querier.py
tutorial_materials/: accuracy_overlapISC_voxels_religious_secular_kosher.nii  example_useage.py  voxels_coords_MNI.csv
web_querier/: querier.py
