[project]
name = "neurosynthpy"
version = "0.0.1"
authors = [
  { name="Idan Grosbard", email="idangrosbard@mail.tau.ac.il" },
]
description = "Querying Neurosynth database using Python"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "black==23.3.0",
    "bleach==6.0.0",
    "build==0.10.0",
    "certifi==2023.5.7",
    "charset-normalizer==3.1.0",
    "click==8.1.3",
    "colorama==0.4.6",
    "docutils==0.20.1",
    "flake8==6.0.0",
    "idna==3.4",
    "importlib-metadata==6.7.0",
    "iniconfig==2.0.0",
    "jaraco-classes==3.2.3",
    "keyring==24.2.0",
    "markdown-it-py==3.0.0",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "more-itertools==9.1.0",
    "mypy-extensions==1.0.0",
    "numpy==1.25.0",
    "packaging==23.1",
    "pandas==2.0.3",
    "pathspec==0.11.1",
    "pkginfo==1.9.6",
    "platformdirs==3.8.0",
    "pluggy==1.2.0",
    "pycodestyle==2.10.0",
    "pyflakes==3.0.1",
    "pygments==2.15.1",
    "pyproject-hooks==1.0.0",
    "pytest==7.4.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "pywin32-ctypes==0.2.2",
    "readme-renderer==40.0",
    "requests==2.31.0",
    "requests-toolbelt==1.0.0",
    "rfc3986==2.0.0",
    "rich==13.4.2",
    "six==1.16.0",
    "twine==4.0.2",
    "tzdata==2023.3",
    "urllib3==2.0.3",
    "webencodings==0.5.1",
    "zipp==3.15.0",
]

[project.urls]
"Homepage" = "https://github.com/idangrosbard/neurosynth_autofeed"
"Bug Tracker" = "https://github.com/idangrosbard/neurosynth_autofeed/issues"