[metadata]
name = neurosynthpy
version = 0.0.1
author = Yohay Zvi, Yuval Navon, Or Sadan, Idan Grosbard
author_email = idangrosbard@mail.tau.ac.il
description = Python api for neurosynth
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = future, timetravel, example
url = https://github.com/idangrosbard/neurosynth_autofeed
project_urls =
    Bug Tracker = https://github.com/idangrosbard/neurosynth_autofeed/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    nilearn
    pandas
    matplotlib
    nibabel

[options.extras_require]
dev = black; flake8; pytest
dist = build; twine
docs = mkdocs

[options.packages.find]
where = src